; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rol.c_rol_init.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rol.c_rol_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rol_state = type { i32, i32* }

@MAX_rol_KEY_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rol_state*, i32*, i32)* @rol_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rol_init(%struct.rol_state* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rol_state*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.rol_state* %0, %struct.rol_state** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.rol_state*, %struct.rol_state** %5, align 8
  %10 = icmp ne %struct.rol_state* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %3
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %11
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %15, 1
  br i1 %16, label %21, label %17

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @MAX_rol_KEY_SIZE, align 4
  %20 = icmp sgt i32 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %17, %14, %11, %3
  store i32 0, i32* %4, align 4
  br label %46

22:                                               ; preds = %17
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.rol_state*, %struct.rol_state** %5, align 8
  %25 = getelementptr inbounds %struct.rol_state, %struct.rol_state* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 8
  store i32 0, i32* %8, align 4
  br label %26

26:                                               ; preds = %42, %22
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp slt i32 %27, %28
  br i1 %29, label %30, label %45

30:                                               ; preds = %26
  %31 = load i32*, i32** %6, align 8
  %32 = load i32, i32* %8, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.rol_state*, %struct.rol_state** %5, align 8
  %37 = getelementptr inbounds %struct.rol_state, %struct.rol_state* %36, i32 0, i32 1
  %38 = load i32*, i32** %37, align 8
  %39 = load i32, i32* %8, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  store i32 %35, i32* %41, align 4
  br label %42

42:                                               ; preds = %30
  %43 = load i32, i32* %8, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %8, align 4
  br label %26

45:                                               ; preds = %26
  store i32 1, i32* %4, align 4
  br label %46

46:                                               ; preds = %45, %21
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
